--- a/bundles/stdcompat/stdcompat-current/META.in
+++ b/bundles/stdcompat/stdcompat-current/META.in
@@ -3,3 +3,5 @@ requires = "@SEQ_PKG@ @RESULT_PKG@ @UCHAR_PKG@"
 version = "@VERSION@"
 archive(byte) = "stdcompat.cma"
 archive(native) = "stdcompat.cmxa"
+plugin(byte) = "stdcompat.cma"
+plugin(native) = "@SHARED_LIBS@"
