--- a/bundles/stdcompat/stdcompat-current/Makefile.am
+++ b/bundles/stdcompat/stdcompat-current/Makefile.am
@@ -38,7 +38,7 @@ MODULES = stdcompat__init.ml stdcompat__root.ml stdcompat__seq_s.ml \
 	stdcompat__spacetime_s.ml stdcompat__moreLabels_s.ml stdcompat__lexing_s.ml \
 	stdcompat__option_s.ml stdcompat__result_s.ml stdcompat__bool_s.ml \
 	stdcompat__fun_s.ml stdcompat__stdlib_s.ml stdcompat__printf_s.ml \
-	stdcompat__printexc_s.ml \
+	stdcompat__printexc_s.ml stdcompat__format_s.ml \
 	stdcompat__pervasives.ml stdcompat__arg.ml stdcompat__lazy.ml \
 	stdcompat__char.ml stdcompat__uchar.ml stdcompat__sys.ml stdcompat__buffer.ml \
 	stdcompat__string.ml stdcompat__stringLabels.ml stdcompat__bytes.ml \
@@ -47,19 +47,19 @@ MODULES = stdcompat__init.ml stdcompat__root.ml stdcompat__seq_s.ml \
 	stdcompat__hashtbl.ml stdcompat__set.ml \
 	stdcompat__map.ml stdcompat__weak.ml \
 	stdcompat__stream.ml stdcompat__digest.ml stdcompat__nativeint.ml \
-	stdcompat__int.ml \
-	stdcompat__int64.ml stdcompat__int32.ml stdcompat__filename.ml \
+	stdcompat__int.ml stdcompat__int64.ml stdcompat__int32.ml \
+	stdcompat__option.ml stdcompat__filename.ml \
 	stdcompat__array.ml stdcompat__arrayLabels.ml \
 	stdcompat__float.ml stdcompat__queue.ml stdcompat__ephemeron.ml \
 	stdcompat__spacetime.ml stdcompat__moreLabels.ml stdcompat__lexing.ml \
-	stdcompat__option.ml stdcompat__printexc.ml stdcompat__result.ml stdcompat__bool.ml \
+	stdcompat__printexc.ml stdcompat__result.ml stdcompat__bool.ml \
 	stdcompat__fun.ml stdcompat__format.ml stdcompat__printf.ml stdcompat__stdlib.ml \
 	stdcompat.ml
 
 MODULES_native = stdcompat__native.ml $(MODULES)
 
 mypkg_SCRIPTS = META $(MODULES_native) $(MODULES_native:.ml=.cmi) \
-	libstdcompat__stubs.a
+	libstdcompat__stubs.a stdcompat.h
 
 if OCAML_SUPPORTS_BYTECODE
 mypkg_SCRIPTS += stdcompat.cma
@@ -88,6 +88,10 @@ if OCAML_SUPPORTS_NO_ALIAS_DEPS
 OCAMLFLAGS += -no-alias-deps
 endif
 
+if OCAML_SUPPORTS_ALERT
+OCAMLCFLAGS += -alert -deprecated
+endif
+
 SUFFIXES = .ml .mli .cmi .cmo .cmx .cmxa .cmxs .cmt
 
 .DEFAULT_GOAL = all
@@ -101,10 +105,10 @@ SUFFIXES = .ml .mli .cmi .cmo .cmx .cmxa .cmxs .cmt
 .ml.cmx :
 	$(OCAMLOPT) -c $(OCAMLCFLAGS) $< -o $@
 
-stdcompat__stubs.o : stdcompat__stubs.c
-	$(OCAMLC) -c -o $@ $<
+stdcompat__stubs.$(OBJEXT) : stdcompat__stubs.c
+	$(OCAMLC) -c $<
 
-libstdcompat__stubs.a : stdcompat__stubs.o
+libstdcompat__stubs.a : stdcompat__stubs.$(OBJEXT)
 	$(OCAMLMKLIB) -o stdcompat__stubs $<
 
 stdcompat.cma : $(MODULES_native:.ml=.cmo) libstdcompat__stubs.a
@@ -117,6 +121,9 @@ stdcompat.a : stdcompat.cmxa
 
 stdcompat.cmxs : $(MODULES_native:.ml=.cmx) libstdcompat__stubs.a
 	$(OCAMLOPT) $(OCAMLLDFLAGS) -shared $(MODULES_native:.ml=.cmx) $(OCAMLLIBFLAGS) -o $@
+
+# Fake dependency to rebuild stdcompat__native.cmi on compiler change
+stdcompat__native.cmi : config.status
 
 stdcompat__native.cmo : stdcompat__native.ml_byte
 	$(OCAMLC) $(OCAMLCFLAGS) -c -impl stdcompat__native.ml_byte
