--- a/bundles/stdcompat/stdcompat-current/stdcompat__format_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__format_s.mli.in
@@ -34,18 +34,16 @@ type stag
 type tag = string
 (** Alias for {!Format.tag} *)
 
-@BEGIN_FROM_4_01_0@
+@BEGIN_FROM_4_06_0@
 type formatter_out_functions = Format.formatter_out_functions =
   {
   out_string: string -> int -> int -> unit ;
   out_flush: unit -> unit ;
   out_newline: unit -> unit ;
   out_spaces: int -> unit ;
-@BEGIN_FROM_4_06_0@
-  out_indent: int -> unit 
-@END_FROM_4_06_0@}
-@END_FROM_4_01_0@
-@BEGIN_BEFORE_4_01_0@
+  out_indent: int -> unit }
+@END_FROM_4_06_0@
+@BEGIN_BEFORE_4_06_0@
 type formatter_out_functions =
   {
   out_string: string -> int -> int -> unit ;
@@ -53,7 +51,7 @@ type formatter_out_functions =
   out_newline: unit -> unit ;
   out_spaces: int -> unit ;
   out_indent: int -> unit }
-@END_BEFORE_4_01_0@
+@END_BEFORE_4_06_0@
 (** @since 4.06.0:
     type formatter_out_functions =
       {
