--- a/bundles/stdcompat/stdcompat-current/stdcompat__printf_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__printf_s.mli.in
@@ -1,20 +1,32 @@
 module type S = sig
 @BEGIN_FROM_4_03_0@
 val ifprintf : 'b -> ('a, 'b, 'c, unit) format4 -> 'a
+(** @since 4.03.0: val ifprintf : 'b -> ('a, 'b, 'c, unit) format4 -> 'a *)
 @END_FROM_4_03_0@
 @BEGIN_BEFORE_4_03_0@
+@BEGIN_FROM_3_10_0@
 val ifprintf : 'b -> ('a, 'b, unit) format -> 'a
+@END_FROM_3_10_0@
+@BEGIN_BEFORE_3_10_0@
+val ifprintf : 'b -> ('a, 'b, 'c, unit) format4 -> 'a
+@END_BEFORE_3_10_0@
 @END_BEFORE_4_03_0@
-(** @since 4.03.0: val ifprintf : 'b -> ('a, 'b, 'c, unit) format4 -> 'a *)
 
 @BEGIN_FROM_4_03_0@
 val ikfprintf : ('b -> 'd) -> 'b -> ('a, 'b, 'c, 'd) format4 -> 'a
-@END_FROM_4_03_0@
-@BEGIN_BEFORE_4_03_0@
-val ikfprintf : (out_channel -> 'a) -> out_channel -> ('b, out_channel, unit, 'a) format4 -> 'b
-@END_BEFORE_4_03_0@
 (** @since 4.03.0:
     val ikfprintf : ('b -> 'd) -> 'b -> ('a, 'b, 'c, 'd) format4 -> 'a *)
+@END_FROM_4_03_0@
+@BEGIN_BEFORE_4_03_0@
+@BEGIN_FROM_4_01_0@
+val ikfprintf :
+    (out_channel -> 'a) ->
+      out_channel -> ('b, out_channel, unit, 'a) format4 -> 'b
+@END_FROM_4_01_0@
+@BEGIN_BEFORE_4_01_0@
+val ikfprintf : ('b -> 'd) -> 'b -> ('a, 'b, 'c, 'd) format4 -> 'a
+@END_BEFORE_4_01_0@
+@END_BEFORE_4_03_0@
 
 @BEGIN_FROM_4_03_0@
 val kbprintf :
@@ -29,7 +41,6 @@ val kbprintf :
 val kbprintf :
   (Buffer.t -> 'd) -> Buffer.t -> ('a, Buffer.t, unit, 'd) format4 -> 'a
 @END_BEFORE_3_10_0@
-
 @END_BEFORE_4_03_0@
 (** @since 4.03.0:
     val kbprintf :
