--- a/bundles/stdcompat/stdcompat-current/stdcompat__stdlib_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__stdlib_s.mli.in
@@ -1,10 +1,10 @@
 module type S = sig
-@BEGIN_FROM_4_08_0@
+@BEGIN_FROM_4_10_0@
   include module type of struct
     include Stdlib
   end
-@END_FROM_4_08_0@
-@BEGIN_BEFORE_4_08_0@
+@END_FROM_4_10_0@
+@BEGIN_BEFORE_4_10_0@
   module Pervasives : Stdcompat__pervasives_s.S
 
   include Stdcompat__pervasives_s.S
@@ -55,6 +55,8 @@ module type S = sig
 
   module Float : Stdcompat__float_s.S
 
+  module Format : Stdcompat__format_s.S
+
   module Fun : Stdcompat__fun_s.S
 
   @BEGIN_FROM_3_12_0@
@@ -70,6 +72,8 @@ module type S = sig
   @END_FROM_3_12_0@
 
   module Hashtbl : Stdcompat__hashtbl_s.S
+
+  module Int : Stdcompat__int_s.S
 
   module Int32 : Stdcompat__int32_s.S
 
@@ -156,5 +160,5 @@ module type S = sig
   module Uchar : Stdcompat__uchar_s.S
 
   module Weak : Stdcompat__weak_s.S
-@END_BEFORE_4_08_0@
+@END_BEFORE_4_10_0@
 end
