--- a/bundles/stdcompat/stdcompat-current/stdcompat__sys_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__sys_s.mli.in
@@ -26,6 +26,41 @@ type signal_behavior = Sys.signal_behavior =
 exception Break 
 (** Alias for {!Sys.Break} *)
 
+@BEGIN_FROM_4_10_0@
+module Immediate64 = Sys.Immediate64
+@END_FROM_4_10_0@
+@BEGIN_BEFORE_4_10_0@
+module Immediate64 :
+sig
+  module type Non_immediate  = sig type t end
+  module type Immediate  = sig type t
+@BEGIN_FROM_4_02_0@
+[@@immediate ]
+@END_FROM_4_02_0@ end
+  module Make :
+  functor (Immediate : Immediate) ->
+    functor (Non_immediate : Non_immediate) ->
+      sig
+        type t
+@BEGIN_FROM_4_02_0@
+[@@immediate64 ]
+@END_FROM_4_02_0@
+        type 'a repr =
+@BEGIN_FROM_4_00_0@
+          | Immediate: Immediate.t repr
+          | Non_immediate: Non_immediate.t repr
+@END_FROM_4_00_0@
+@BEGIN_BEFORE_4_00_0@
+          | Immediate
+          | Non_immediate
+@END_BEFORE_4_00_0@
+        val repr : t repr
+      end
+end
+@END_BEFORE_4_10_0@
+(** @since 4.10.0: module Immediate64 = Sys.Immediate64
+ *)
+
 val max_floatarray_length : int
 (** @since 4.08.0: val max_floatarray_length : int *)
 
@@ -116,8 +151,15 @@ val is_directory : string -> bool
     external is_directory : string -> bool = "caml_sys_is_directory"
  *)
 
+@BEGIN_FROM_4_09_0@
+external argv : string array = "%sys_argv"
+@END_FROM_4_09_0@
+@BEGIN_BEFORE_4_09_0@
 val argv : string array
-(** Alias for {!Sys.argv} *)
+@END_BEFORE_4_09_0@
+(** @since 4.09.0: external argv : string array = "%sys_argv"
+@since 3.07.0: val argv : string array
+ *)
 
 val executable_name : string
 (** Alias for {!Sys.executable_name} *)
